--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-  "name": "Galería de Cartas",
-  "short_name": "Cartas",
-  "start_url": "/index.html",
+  "name": "Michi Box",
+  "short_name": "Michi",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
       "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
