--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
   "name": "Michi Box",
-  "short_name": "Michi",
+  "short_name": "Michi Box",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#800080",
+  "theme_color": "#800080",
   "icons": [
     {
       "src": "./assets/icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
