--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#5c1a7e",
-  "theme_color": "#800080",
+  "theme_color": "#5c1a7e",
   "icons": [
     {
       "src": "./assets/icon-192.png",
