--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,11 @@
   "short_name": "Michi Box",
   "start_url": "/",
   "display": "standalone",
-    "orientation": "portrait",
-  "background_color": "#5c1a7e",
-  "theme_color": "#5c1a7e",
+  "orientation": "portrait",
+
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+
   "icons": [
     {
       "src": "./assets/icon-192.png",
