--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,9 @@
   "short_name": "Michi Box",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
-
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
-
+    "orientation": "portrait",
+  "background_color": "#5c1a7e",
+  "theme_color": "#5c1a7e",
   "icons": [
     {
       "src": "./assets/icon-192.png",
